TPSSL.output
Terminals unused in grammar

   PRESERVADA
   SWITCH
   CASE
   BREAK
   DEFAULT
   '^'


Estado 39 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 40 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 41 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 43 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 50 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 57 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 58 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 90 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 110 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 115 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 117 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 118 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 119 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 120 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 140 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: declaracionFuncion caracterDeCorte2
    4     | declaracion ';' caracterDeCorte2
    5     | sentencia caracterDeCorte2
    6     | error caracterDeCorte

    7 caracterDeCorte: ';'
    8                | '\n'
    9                | ';' '\n'

   10 caracterDeCorte2: /* vacío */
   11                 | '\n'

   12 declaracionFuncion: TIPO_DATO IDENTIFICADOR '(' listaDeclaraciones ')' ';'
   13                   | TIPO_DATO IDENTIFICADOR '(' listaDeclaraciones ')' sentenciaCompuesta

   14 sentencia: sentenciaCompuesta
   15          | sentenciaExpresion
   16          | sentenciaSeleccion
   17          | sentenciaIteracion
   18          | sentenciaSalto

   19 sentenciaCompuesta: '{' '}'
   20                   | '{' listaDeclaraciones listaSentencias '}'

   21 listaDeclaraciones: /* vacío */
   22                   | declaracion
   23                   | declaracion ',' listaDeclaraciones

   24 listaSentencias: sentencia
   25                | sentencia listaSentencias

   26 sentenciaSeleccion: IF '(' expresion ')' sentencia
   27                   | IF '(' expresion ')' sentencia ELSE sentencia

   28 sentenciaIteracion: WHILE '(' expresion ')' sentencia
   29                   | DO sentencia WHILE '(' expresion ')' ';'
   30                   | FOR '(' expresion ';' expresion ';' expresion ')' sentencia

   31 sentenciaSalto: RETURN expresion ';'

   32 sentenciaExpresion: expresion ';'

   33 declaracion: TIPO_DATO listaIdentificadores

   34 listaIdentificadores: identificadorA
   35                     | identificadorA ',' listaIdentificadores

   36 identificadorA: IDENTIFICADOR
   37               | IDENTIFICADOR '=' expresion

   38 expresion: expAsignacion

   39 expAsignacion: expCondicional
   40              | expUnaria operAsignacion expAsignacion

   41 operAsignacion: AUMENTOIGUAL
   42               | PORIGUAL
   43               | '='

   44 expCondicional: expOR
   45               | expOR OPCION expCondicional

   46 expOR: expAnd
   47      | expOR OR expAnd

   48 expAnd: expIgualdad
   49       | expAnd AND expIgualdad

   50 expIgualdad: expRelacional
   51            | expIgualdad IGUALDAD2 expRelacional
   52            | expIgualdad DISTINTO expRelacional

   53 expRelacional: expAditiva
   54              | expRelacional operRelacional expAditiva

   55 operRelacional: MAYOR
   56               | MENOR
   57               | MAYORIGUAL
   58               | MENORIGUAL

   59 expAditiva: expMultiplicativa
   60           | expAditiva '+' expMultiplicativa
   61           | expAditiva '-' expMultiplicativa

   62 expMultiplicativa: expUnaria
   63                  | expMultiplicativa '*' expUnaria
   64                  | expMultiplicativa '/' expUnaria
   65                  | expMultiplicativa '%' expUnaria

   66 expUnaria: expPosfijo
   67          | AUMENTO expUnaria
   68          | DECREMENTO expUnaria
   69          | expUnaria AUMENTO
   70          | expUnaria DECREMENTO
   71          | operUnario expUnaria
   72          | SIZEOF '(' TIPO_DATO ')'

   73 operUnario: '&'
   74           | '*'
   75           | '-'
   76           | '!'

   77 expPosfijo: expPrimaria
   78           | expPosfijo '[' expresion ']'
   79           | expPosfijo '(' listaArgumentos ')'
   80           | '(' expresion ')'

   81 listaArgumentos: expAsignacion
   82                | listaArgumentos ',' expAsignacion

   83 expPrimaria: IDENTIFICADOR
   84            | CARACTER
   85            | NUM
   86            | CADENA


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 8 9 11
'!' (33) 76
'%' (37) 65
'&' (38) 73
'(' (40) 12 13 26 27 28 29 30 72 79 80
')' (41) 12 13 26 27 28 29 30 72 79 80
'*' (42) 63 74
'+' (43) 60
',' (44) 23 35 82
'-' (45) 61 75
'/' (47) 64
';' (59) 4 7 9 12 29 30 31 32
'=' (61) 37 43
'[' (91) 78
']' (93) 78
'^' (94)
'{' (123) 19 20
'}' (125) 19 20
error (256) 6
NUM (258) 85
CARACTER (259) 84
CADENA (260) 86
IDENTIFICADOR (261) 12 13 36 37 83
PRESERVADA (262)
TIPO_DATO (263) 12 13 33 72
IF (264) 26 27
DO (265) 29
WHILE (266) 28 29
FOR (267) 30
ELSE (268) 27
RETURN (269) 31
SWITCH (270)
CASE (271)
BREAK (272)
DEFAULT (273)
SIZEOF (274) 72
IGUALDAD2 (275) 51
AUMENTO (276) 67 69
MAYORIGUAL (277) 57
MENORIGUAL (278) 58
AUMENTOIGUAL (279) 41
AND (280) 49
OR (281) 47
DISTINTO (282) 52
OPCION (283) 45
MAYOR (284) 55
MENOR (285) 56
DECREMENTO (286) 68 70
PORIGUAL (287) 42


No terminales con las reglas donde aparecen

$accept (51)
    en la izquierda: 0
input (52)
    en la izquierda: 1 2, en la derecha: 0 2
line (53)
    en la izquierda: 3 4 5 6, en la derecha: 2
caracterDeCorte (54)
    en la izquierda: 7 8 9, en la derecha: 6
caracterDeCorte2 (55)
    en la izquierda: 10 11, en la derecha: 3 4 5
declaracionFuncion (56)
    en la izquierda: 12 13, en la derecha: 3
sentencia (57)
    en la izquierda: 14 15 16 17 18, en la derecha: 5 24 25 26 27 28
    29 30
sentenciaCompuesta (58)
    en la izquierda: 19 20, en la derecha: 13 14
listaDeclaraciones (59)
    en la izquierda: 21 22 23, en la derecha: 12 13 20 23
listaSentencias (60)
    en la izquierda: 24 25, en la derecha: 20 25
sentenciaSeleccion (61)
    en la izquierda: 26 27, en la derecha: 16
sentenciaIteracion (62)
    en la izquierda: 28 29 30, en la derecha: 17
sentenciaSalto (63)
    en la izquierda: 31, en la derecha: 18
sentenciaExpresion (64)
    en la izquierda: 32, en la derecha: 15
declaracion (65)
    en la izquierda: 33, en la derecha: 4 22 23
listaIdentificadores (66)
    en la izquierda: 34 35, en la derecha: 33 35
identificadorA (67)
    en la izquierda: 36 37, en la derecha: 34 35
expresion (68)
    en la izquierda: 38, en la derecha: 26 27 28 29 30 31 32 37 78
    80
expAsignacion (69)
    en la izquierda: 39 40, en la derecha: 38 40 81 82
operAsignacion (70)
    en la izquierda: 41 42 43, en la derecha: 40
expCondicional (71)
    en la izquierda: 44 45, en la derecha: 39 45
expOR (72)
    en la izquierda: 46 47, en la derecha: 44 45 47
expAnd (73)
    en la izquierda: 48 49, en la derecha: 46 47 49
expIgualdad (74)
    en la izquierda: 50 51 52, en la derecha: 48 49 51 52
expRelacional (75)
    en la izquierda: 53 54, en la derecha: 50 51 52 54
operRelacional (76)
    en la izquierda: 55 56 57 58, en la derecha: 54
expAditiva (77)
    en la izquierda: 59 60 61, en la derecha: 53 54 60 61
expMultiplicativa (78)
    en la izquierda: 62 63 64 65, en la derecha: 59 60 61 63 64 65
expUnaria (79)
    en la izquierda: 66 67 68 69 70 71 72, en la derecha: 40 62 63
    64 65 67 68 69 70 71
operUnario (80)
    en la izquierda: 73 74 75 76, en la derecha: 71
expPosfijo (81)
    en la izquierda: 77 78 79 80, en la derecha: 66 78 79
listaArgumentos (82)
    en la izquierda: 81 82, en la derecha: 79 82
expPrimaria (83)
    en la izquierda: 83 84 85 86, en la derecha: 77


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end           desplazar e ir al estado 2
    error          desplazar e ir al estado 3
    NUM            desplazar e ir al estado 4
    CARACTER       desplazar e ir al estado 5
    CADENA         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    TIPO_DATO      desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    DO             desplazar e ir al estado 10
    WHILE          desplazar e ir al estado 11
    FOR            desplazar e ir al estado 12
    RETURN         desplazar e ir al estado 13
    SIZEOF         desplazar e ir al estado 14
    AUMENTO        desplazar e ir al estado 15
    DECREMENTO     desplazar e ir al estado 16
    '*'            desplazar e ir al estado 17
    '('            desplazar e ir al estado 18
    '{'            desplazar e ir al estado 19
    '-'            desplazar e ir al estado 20
    '&'            desplazar e ir al estado 21
    '!'            desplazar e ir al estado 22

    line                ir al estado 23
    declaracionFuncion  ir al estado 24
    sentencia           ir al estado 25
    sentenciaCompuesta  ir al estado 26
    sentenciaSeleccion  ir al estado 27
    sentenciaIteracion  ir al estado 28
    sentenciaSalto      ir al estado 29
    sentenciaExpresion  ir al estado 30
    declaracion         ir al estado 31
    expresion           ir al estado 32
    expAsignacion       ir al estado 33
    expCondicional      ir al estado 34
    expOR               ir al estado 35
    expAnd              ir al estado 36
    expIgualdad         ir al estado 37
    expRelacional       ir al estado 38
    expAditiva          ir al estado 39
    expMultiplicativa   ir al estado 40
    expUnaria           ir al estado 41
    operUnario          ir al estado 42
    expPosfijo          ir al estado 43
    expPrimaria         ir al estado 44


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    6 line: error . caracterDeCorte

    ';'   desplazar e ir al estado 45
    '\n'  desplazar e ir al estado 46

    caracterDeCorte  ir al estado 47


estado 4

   85 expPrimaria: NUM .

    $default  reduce usando la regla 85 (expPrimaria)


estado 5

   84 expPrimaria: CARACTER .

    $default  reduce usando la regla 84 (expPrimaria)


estado 6

   86 expPrimaria: CADENA .

    $default  reduce usando la regla 86 (expPrimaria)


estado 7

   83 expPrimaria: IDENTIFICADOR .

    $default  reduce usando la regla 83 (expPrimaria)


estado 8

   12 declaracionFuncion: TIPO_DATO . IDENTIFICADOR '(' listaDeclaraciones ')' ';'
   13                   | TIPO_DATO . IDENTIFICADOR '(' listaDeclaraciones ')' sentenciaCompuesta
   33 declaracion: TIPO_DATO . listaIdentificadores

    IDENTIFICADOR  desplazar e ir al estado 48

    listaIdentificadores  ir al estado 49
    identificadorA        ir al estado 50


estado 9

   26 sentenciaSeleccion: IF . '(' expresion ')' sentencia
   27                   | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 51


estado 10

   29 sentenciaIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    NUM            desplazar e ir al estado 4
    CARACTER       desplazar e ir al estado 5
    CADENA         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    IF             desplazar e ir al estado 9
    DO             desplazar e ir al estado 10
    WHILE          desplazar e ir al estado 11
    FOR            desplazar e ir al estado 12
    RETURN         desplazar e ir al estado 13
    SIZEOF         desplazar e ir al estado 14
    AUMENTO        desplazar e ir al estado 15
    DECREMENTO     desplazar e ir al estado 16
    '*'            desplazar e ir al estado 17
    '('            desplazar e ir al estado 18
    '{'            desplazar e ir al estado 19
    '-'            desplazar e ir al estado 20
    '&'            desplazar e ir al estado 21
    '!'            desplazar e ir al estado 22

    sentencia           ir al estado 52
    sentenciaCompuesta  ir al estado 26
    sentenciaSeleccion  ir al estado 27
    sentenciaIteracion  ir al estado 28
    sentenciaSalto      ir al estado 29
    sentenciaExpresion  ir al estado 30
    expresion           ir al estado 32
    expAsignacion       ir al estado 33
    expCondicional      ir al estado 34
    expOR               ir al estado 35
    expAnd              ir al estado 36
    expIgualdad         ir al estado 37
    expRelacional       ir al estado 38
    expAditiva          ir al estado 39
    expMultiplicativa   ir al estado 40
    expUnaria           ir al estado 41
    operUnario          ir al estado 42
    expPosfijo          ir al estado 43
    expPrimaria         ir al estado 44


estado 11

   28 sentenciaIteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 53


estado 12

   30 sentenciaIteracion: FOR . '(' expresion ';' expresion ';' expresion ')' sentencia

    '('  desplazar e ir al estado 54


estado 13

   31 sentenciaSalto: RETURN . expresion ';'

    NUM            desplazar e ir al estado 4
    CARACTER       desplazar e ir al estado 5
    CADENA         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    SIZEOF         desplazar e ir al estado 14
    AUMENTO        desplazar e ir al estado 15
    DECREMENTO     desplazar e ir al estado 16
    '*'            desplazar e ir al estado 17
    '('            desplazar e ir al estado 18
    '-'            desplazar e ir al estado 20
    '&'            desplazar e ir al estado 21
    '!'            desplazar e ir al estado 22

    expresion          ir al estado 55
    expAsignacion      ir al estado 33
    expCondicional     ir al estado 34
    expOR              ir al estado 35
    expAnd             ir al estado 36
    expIgualdad        ir al estado 37
    expRelacional      ir al estado 38
    expAditiva         ir al estado 39
    expMultiplicativa  ir al estado 40
    expUnaria          ir al estado 41
    operUnario         ir al estado 42
    expPosfijo         ir al estado 43
    expPrimaria        ir al estado 44


estado 14

   72 expUnaria: SIZEOF . '(' TIPO_DATO ')'

    '('  desplazar e ir al estado 56


estado 15

   67 expUnaria: AUMENTO . expUnaria

    NUM            desplazar e ir al estado 4
    CARACTER       desplazar e ir al estado 5
    CADENA         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    SIZEOF         desplazar e ir al estado 14
    AUMENTO        desplazar e ir al estado 15
    DECREMENTO     desplazar e ir al estado 16
    '*'            desplazar e ir al estado 17
    '('            desplazar e ir al estado 18
    '-'            desplazar e ir al estado 20
    '&'            desplazar e ir al estado 21
    '!'            desplazar e ir al estado 22

    expUnaria    ir al estado 57
    operUnario   ir al estado 42
    expPosfijo   ir al estado 43
    expPrimaria  ir al estado 44


estado 16

   68 expUnaria: DECREMENTO . expUnaria

    NUM            desplazar e ir al estado 4
    CARACTER       desplazar e ir al estado 5
    CADENA         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    SIZEOF         desplazar e ir al estado 14
    AUMENTO        desplazar e ir al estado 15
    DECREMENTO     desplazar e ir al estado 16
    '*'            desplazar e ir al estado 17
    '('            desplazar e ir al estado 18
    '-'            desplazar e ir al estado 20
    '&'            desplazar e ir al estado 21
    '!'            desplazar e ir al estado 22

    expUnaria    ir al estado 58
    operUnario   ir al estado 42
    expPosfijo   ir al estado 43
    expPrimaria  ir al estado 44


estado 17

   74 operUnario: '*' .

    $default  reduce usando la regla 74 (operUnario)


estado 18

   80 expPosfijo: '(' . expresion ')'

    NUM            desplazar e ir al estado 4
    CARACTER       desplazar e ir al estado 5
    CADENA         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    SIZEOF         desplazar e ir al estado 14
    AUMENTO        desplazar e ir al estado 15
    DECREMENTO     desplazar e ir al estado 16
    '*'            desplazar e ir al estado 17
    '('            desplazar e ir al estado 18
    '-'            desplazar e ir al estado 20
    '&'            desplazar e ir al estado 21
    '!'            desplazar e ir al estado 22

    expresion          ir al estado 59
    expAsignacion      ir al estado 33
    expCondicional     ir al estado 34
    expOR              ir al estado 35
    expAnd             ir al estado 36
    expIgualdad        ir al estado 37
    expRelacional      ir al estado 38
    expAditiva         ir al estado 39
    expMultiplicativa  ir al estado 40
    expUnaria          ir al estado 41
    operUnario         ir al estado 42
    expPosfijo         ir al estado 43
    expPrimaria        ir al estado 44


estado 19

   19 sentenciaCompuesta: '{' . '}'
   20                   | '{' . listaDeclaraciones listaSentencias '}'

    TIPO_DATO  desplazar e ir al estado 60
    '}'        desplazar e ir al estado 61

    $default  reduce usando la regla 21 (listaDeclaraciones)

    listaDeclaraciones  ir al estado 62
    declaracion         ir al estado 63


estado 20

   75 operUnario: '-' .

    $default  reduce usando la regla 75 (operUnario)


estado 21

   73 operUnario: '&' .

    $default  reduce usando la regla 73 (operUnario)


estado 22

   76 operUnario: '!' .

    $default  reduce usando la regla 76 (operUnario)


estado 23

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 24

    3 line: declaracionFuncion . caracterDeCorte2

    '\n'  desplazar e ir al estado 64

    $default  reduce usando la regla 10 (caracterDeCorte2)

    caracterDeCorte2  ir al estado 65


estado 25

    5 line: sentencia . caracterDeCorte2

    '\n'  desplazar e ir al estado 64

    $default  reduce usando la regla 10 (caracterDeCorte2)

    caracterDeCorte2  ir al estado 66


estado 26

   14 sentencia: sentenciaCompuesta .

    $default  reduce usando la regla 14 (sentencia)


estado 27

   16 sentencia: sentenciaSeleccion .

    $default  reduce usando la regla 16 (sentencia)


estado 28

   17 sentencia: sentenciaIteracion .

    $default  reduce usando la regla 17 (sentencia)


estado 29

   18 sentencia: sentenciaSalto .

    $default  reduce usando la regla 18 (sentencia)


estado 30

   15 sentencia: sentenciaExpresion .

    $default  reduce usando la regla 15 (sentencia)


estado 31

    4 line: declaracion . ';' caracterDeCorte2

    ';'  desplazar e ir al estado 67


estado 32

   32 sentenciaExpresion: expresion . ';'

    ';'  desplazar e ir al estado 68


estado 33

   38 expresion: expAsignacion .

    $default  reduce usando la regla 38 (expresion)


estado 34

   39 expAsignacion: expCondicional .

    $default  reduce usando la regla 39 (expAsignacion)


estado 35

   44 expCondicional: expOR .
   45               | expOR . OPCION expCondicional
   47 expOR: expOR . OR expAnd

    OR      desplazar e ir al estado 69
    OPCION  desplazar e ir al estado 70

    $default  reduce usando la regla 44 (expCondicional)


estado 36

   46 expOR: expAnd .
   49 expAnd: expAnd . AND expIgualdad

    AND  desplazar e ir al estado 71

    $default  reduce usando la regla 46 (expOR)


estado 37

   48 expAnd: expIgualdad .
   51 expIgualdad: expIgualdad . IGUALDAD2 expRelacional
   52            | expIgualdad . DISTINTO expRelacional

    IGUALDAD2  desplazar e ir al estado 72
    DISTINTO   desplazar e ir al estado 73

    $default  reduce usando la regla 48 (expAnd)


estado 38

   50 expIgualdad: expRelacional .
   54 expRelacional: expRelacional . operRelacional expAditiva

    MAYORIGUAL  desplazar e ir al estado 74
    MENORIGUAL  desplazar e ir al estado 75
    MAYOR       desplazar e ir al estado 76
    MENOR       desplazar e ir al estado 77

    $default  reduce usando la regla 50 (expIgualdad)

    operRelacional  ir al estado 78


estado 39

   53 expRelacional: expAditiva .
   60 expAditiva: expAditiva . '+' expMultiplicativa
   61           | expAditiva . '-' expMultiplicativa

    '+'  desplazar e ir al estado 79
    '-'  desplazar e ir al estado 80

    '-'       [reduce usando la regla 53 (expRelacional)]
    $default  reduce usando la regla 53 (expRelacional)


estado 40

   59 expAditiva: expMultiplicativa .
   63 expMultiplicativa: expMultiplicativa . '*' expUnaria
   64                  | expMultiplicativa . '/' expUnaria
   65                  | expMultiplicativa . '%' expUnaria

    '*'  desplazar e ir al estado 81
    '/'  desplazar e ir al estado 82
    '%'  desplazar e ir al estado 83

    '*'       [reduce usando la regla 59 (expAditiva)]
    $default  reduce usando la regla 59 (expAditiva)


estado 41

   40 expAsignacion: expUnaria . operAsignacion expAsignacion
   62 expMultiplicativa: expUnaria .
   69 expUnaria: expUnaria . AUMENTO
   70          | expUnaria . DECREMENTO

    AUMENTO       desplazar e ir al estado 84
    AUMENTOIGUAL  desplazar e ir al estado 85
    DECREMENTO    desplazar e ir al estado 86
    PORIGUAL      desplazar e ir al estado 87
    '='           desplazar e ir al estado 88

    AUMENTO     [reduce usando la regla 62 (expMultiplicativa)]
    DECREMENTO  [reduce usando la regla 62 (expMultiplicativa)]
    $default    reduce usando la regla 62 (expMultiplicativa)

    operAsignacion  ir al estado 89


estado 42

   71 expUnaria: operUnario . expUnaria

    NUM            desplazar e ir al estado 4
    CARACTER       desplazar e ir al estado 5
    CADENA         desplazar e ir al estado 6
    IDENTIFICADOR  desplazar e ir al estado 7
    SIZEOF         desplazar e ir al estado 14
    AUMENTO        desplazar e ir al estado 15
    DECREMENTO     desplazar e ir al estado 16
    '*'            desplazar e ir al estado 17
    '('            desplazar e ir al estado 18
    '-'            desplazar e ir al estado 20
    '&'            desplazar e ir al estado 21
    '!'            desplazar e ir al estado 22

    expUnaria    ir al estado 90
    operUnario   ir al estado 42
    expPosfijo   ir al estado 43
    expPrimaria  ir al estado 44


estado 43

   66 expUnaria: expPosfijo .
   78 expPosfijo: expPosfijo . '[' expresion ']'
   79           | expPosfijo . '(' listaArgumentos ')'

    '('  desplazar e ir al estado 91
    '['  desplazar e ir al estado 92

